# msrv-bump

./: Cargo.toml  README.md
src/: main.rs
