[package]
name = "msrv-bump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
itertools = "0.12.1"
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
